Mon Mar 26 15:42:35 UTC 2007  William R. Otte  <wotte@dre.vanderbilt.edu>

        * tests/TSS_Test.cpp
        
          Workaround for strict aliasing warning from GCC.

Mon Mar 26 13:12:22 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
        * bin/tao_other_tests.lst:
          Moved DIOP test from other to orb tests

Sun Mar 25 23:22:22 UTC 2007  William R. Otte  <wotte@dre.vanderbilt.edu>

        * contrib/utility/Utility/ExH/System/DescriptiveException.hpp
        * contrib/utility/Utility/ExH/System/DescriptiveException.ipp
        * contrib/utility/Utility/ExH/Compound.tpp
        * contrib/utility/Utility/ExH/Compound.hpp
        * contrib/utility/Utility/ExH/Logic/Exception.hpp
        * contrib/utility/Utility/ExH/Logic/DescriptiveException.hpp
        * contrib/utility/Utility/ExH/Logic/DescriptiveException.ipp
        * contrib/utility/Utility/ReferenceCounting/Interface.hpp
        * contrib/utility/Utility/ReferenceCounting/DefaultImpl.hpp

          An attempt to deal with copious warnings eminating from this
          in GCC CIDLC builds.

Fri Mar 23 12:40:32 UTC 2007  Ossama Othman  <ossama_othman at symantec dot com>

        * ace/CDR_Base.inl (swap_2, swap_4, swap_8):

          Take advantage of MSVC++ compiler intrinsic byte swapping
          functions to improve performance when demarshaling CDR streams
          sent by a host with a different byte ordering.

Fri Mar 23 15:48:42 UTC 2007  Steve Huston  <shuston@riverace.com>

        * ace/Handle_Gobbler.{h inl}: Removed left-over disabled code from
          Thu Mar 22 18:33:19 UTC 2007  Steve Huston  <shuston@riverace.com>

Fri Mar 23 15:36:48 UTC 2007  Steve Huston  <shuston@riverace.com>

        * ace/DLL_Manager.cpp (close): After
          Thu Mar 22 18:33:19 UTC 2007  Steve Huston  <shuston@riverace.com>
          was closing the wrong handle value; fixed.

Fri Mar 23 15:19:18 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
