@@ -1,3 +1,9 @@
+Mon Mar 26 15:56:19 UTC 2007  William R. Otte  <wotte@dre.vanderbilt.edu>
+
+        * tests/Config_Test.cpp
+        
+          Workaround for strict aliasing warning from GCC.
+
 Mon Mar 26 15:42:35 UTC 2007  William R. Otte  <wotte@dre.vanderbilt.edu>
 
         * tests/TSS_Test.cpp
